--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                 <nav class="navbar navbar-expand-lg navbar-dark fixed-top ">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="#">GonzaloSian.Com</a>
+
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
@@ -54,6 +56,7 @@
                                 </li>
                             </ul>
                         </div>
+
                     </div>
                 </nav>
                 <!-- </div> -->
@@ -174,16 +177,13 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 4"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 4"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 4"></button>
-                    <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 4"></button> -->
-                    <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 4"></button> -->
-                    <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 4"></button> -->
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="./images/portafolio/01_AdminPro01_1280x600.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/portafolio/02_Cerveza_Freiheit01_1280x600.jpg" class="d-block w-100" alt="...">
+                        <img src="./images/portafolio/02_Cerveza_Freiheit02_1280x600.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="./images/portafolio/03_Ferreteria_Ofredi01_1280x600.jpg" class="d-block w-100" alt="...">
@@ -206,15 +206,6 @@
                     <div class="carousel-item">
                         <img src="./images/portafolio/09_Jobs-Github_1280x600.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <!-- <div class="carousel-item">
-              <img src="./images/portafolio/10_Vendo-Auto.jpg" class="d-block w-100" alt="...">
-            </div> -->
-                    <!-- <div class="carousel-item">
-              <img src="./images/portafolio/11_Pixabay-Buscador-Imagenes.jpg" class="d-block w-100" alt="...">
-            </div> -->
-                    <!-- <div class="carousel-item">
-              <img src="./images/portafolio/12_Clima-Buscador.jpg" class="d-block w-100" alt="...">
-            </div> -->
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -295,8 +286,8 @@
                 <div class="col-md-4 ">
                     <form name="contact" method="POST" data-netlify="true">
                         <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">Nombre/Empresa</label>
-                            <input name="name" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre/Empresa">
+                            <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                            <input name="name" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlInput2" class="form-label">Email</label>
