--- a/index.html
+++ b/index.html
@@ -322,6 +322,23 @@
     <script defer src="main.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 
+    <!-- Hotjar Tracking Code for gonzalosian.netlify.app -->
+    <script>
+        (function(h, o, t, j, a, r) {
+            h.hj = h.hj || function() {
+                (h.hj.q = h.hj.q || []).push(arguments)
+            };
+            h._hjSettings = {
+                hjid: 2417975,
+                hjsv: 6
+            };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script');
+            r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
